# mppca-denoising

./: .gitignore  ALGORITHM.md  README.md  pyproject.toml
scripts/: benchmark.py  compare_with_matlab.py  generate_matlab_comparison_cases.py  matlab_compare_common.py  run_matlab_comparison.sh  run_matlab_reference.m
src/mp_pca_tensor_denoising/: denoise.py
src/mppca_denoising/: __init__.py  _noise_estimation.py  _optimal_shrinkage.py  _patch_denoising.py  cli.py  denoise.py
