[project]
name = "mp-pca-tensor-denoising"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oscar van der Heide", email = "oscarvanderheide@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "scipy>=1.10",
    "numpy>=1.24",
]

[project.scripts]
mp-pca-tensor-denoising = "mp_pca_tensor_denoising:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
